# pycutter

./: LICENSE  README.md  cookiecutter.json  project_structure
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .coderabbit.yaml  .cursor  .cursorrules  .gitignore  README.MD  README.md  makefile  mypy.ini  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: main.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/config/: __init__.py  config.py
{{cookiecutter.project_slug}}/tests/: test_main.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: main.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/config/: __init__.py  config.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/settings/: __init__.py  settings.py
