[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
description = "{{ cookiecutter.project_description }}"
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}
]
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "python-dotenv>=1.0.1",
    {% if cookiecutter.project_type == "api" %}
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    {% endif %}
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.1",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "B", "C4", "I", "YTT", "S", "SIM", "UP"
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.poetry]
package-mode = true 